[metadata]
license_files = 
    LICENSE
    README.md

[bdist_wheel]
universal=1

[tool:pytest]
norecursedirs =
    .git
    bin
    dist
    build
    _build
    etc
    local
    ci
    docs
    man
    share
    samples
    .cache
    .settings
    Include
    include
    Lib
    lib
    lib64
    Lib64
    Scripts
    thirdparty
    tmp

python_files = *.py

python_classes=Test
python_functions=test

addopts =
    -rfExXw
    --strict
    --ignore setup.py
    --doctest-modules
